@@ -507,7 +507,8 @@ encode_keychange(	oid	*hashtype,	u_int  hashtype_len,
             kcstring += properlength;
             nbytes    = 0;
             while ((int)(nbytes++) < properlength) {
-            	*kcstring++ = *kcstring ^ *newkey++;
+                u_char kcs = *kcstring;
+            	*kcstring++ = kcs ^ *newkey++;
             }
         }
 
@@ -624,7 +625,8 @@ decode_keychange(	oid	*hashtype,	u_int  hashtype_len,
             bufp   = kcstring+properlength;
             nbytes = 0;
             while ((int)(nbytes++) < properlength) {
-                    *newkey++ = *newkey ^ *bufp++;
+                    u_char nk = *newkey;
+                    *newkey++ = nk ^ *bufp++;
             }
         }
 
